<resources>
    <string name="app_name" translatable="false">FloristikUp</string>

    <string name="signin_title">Welcome back</string>
    <string name="signup_title">Create account</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="create_new_account">Create a new account</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="street">Street:</string>
    <string name="house">House:</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="dont_have_acc">Don`t have an account?</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="create_acc">Create an account</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="flower_storages">Flower storages</string>
    <string name="flower_name">Name:</string>
    <string name="color">Color:</string>
    <string name="shelf_life">Shelf life:</string>
    <string name="min_temperature">Min temperature:</string>
    <string name="max_temperature">Max temperature:</string>
    <string name="desc">Description:</string>
    <string name="min_area">Minimum area:</string>
    <string name="max_area">Maximum area:</string>
    <string name="room_type">Room type:</string>
    <string name="room_number">Room number:</string>
    <string name="price">Price:</string>
    <string name="rooms">Placements</string>
    <string name="flowers">Flowers</string>
    <string name="search">Company search</string>
    <string name="cleaning" translatable="false">CLEANING_PROVIDER</string>
    <string name="customer" translatable="false">PLACEMENT_OWNER</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="floor">Floor:</string>
    <string name="winCount">Number of windows:</string>
    <string name="area">Area:</string>
    <string name="last_cl_date">Date of last cleaning:</string>
    <string name="air_quality">Air quality:</string>
    <string name="humidity">Humidity:</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="contractor_id">ID</string>
    <string name="add_resource">Add resource</string>
    <string name="exhaustion_date">Date of resource exhaustion</string>
    <string name="password_tip">The password can only consist of Latin letters and numbers, and is between 8 and 24 characters long.</string>
    <string name="passwords_tip">Passwords do not match.</string>
    <string name="email_tip">It`s not an email format.</string>
    <string name="phone_tip">It`s not a phone format.</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="res_added">Resource added successfully!</string>
    <string name="not_en">Not enough data for analysis.</string>
    <string name="room_id">Room ID:</string>
    <string name="edit_flower">Edit Flower</string>
    <string name="add_flower">Add Flower</string>
    <string name="edit_room">Edit Placement</string>
    <string name="add_room">Add placement</string>
    <string name="cancel">Cancel</string>
    <string name="price_pm">Price per meter</string>
    <string name="save">Save</string>
    <string name="current_location">You are here</string>
    <string name="open_map">Open map</string>
    <string name="sign_contract">Create flower storage</string>
    <string name="cust_name">Customer name:</string>
    <string name="clean_came">Cleaning name:</string>
    <string name="pick_serv_name">Pick flower name</string>
    <string name="pick_room">Pick placement id</string>
    <string name="loading">Loading…</string>
    <string name="temperature">Temperature:</string>
    <string name="capacity">Capacity:</string>
    <string name="max_capacity">Max capacity:</string>
    <string name="to_storages">To storages</string>
    <string name="start_date">Start date:</string>
    <string name="amount">Amount:</string>
    <string name="normal_shelf_life">Shelf life is normal</string>
    <string name="expired_shelf_life">Shelf life is expired</string>
    <string name="climate_is_normal">Microclimate is satisfactory</string>
    <string name="climate_is_abnormal">Microclimate is unsatisfactory</string>
    <string name="placement_number">Placement №</string>
    <string name="redistribute">Redistribute</string>
    <string name="are_you_sure_redistribute">Perform redistribution for flowers with unsatisfactory microclimate?</string>
</resources>