<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/storage_cv"
    style="@style/card">

    <RelativeLayout
            style="@style/card_rl"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/storage_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_header">
            <TextView
                    android:id="@+id/storage_info_header_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/light"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

        <TextView
                android:id="@+id/shelf_life_info"
                style="@style/card_text"
                android:text="@string/normal_shelf_life"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/storage_header"/>

        <TextView
                android:id="@+id/climate_info"
                style="@style/card_text"
                android:text="@string/climate_is_normal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/shelf_life_info"/>

        <TextView
                android:id="@+id/start_date"
                style="@style/card_text"
                android:layout_below="@+id/climate_info"
                android:layout_marginTop="10dp"
                android:text="@string/start_date"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/start_date_text"
                style="@style/card_text"
                android:layout_alignTop="@+id/start_date"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/start_date" />

        <TextView
                android:id="@+id/shelf_life_label"
                style="@style/card_text"
                android:layout_below="@+id/start_date"
                android:layout_marginTop="10dp"
                android:text="@string/shelf_life"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/shelf_life_text"
                style="@style/card_text"
                android:layout_alignTop="@+id/shelf_life_label"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/shelf_life_label" />

        <TextView
                android:id="@+id/amount_label"
                style="@style/card_text"
                android:layout_below="@+id/shelf_life_label"
                android:layout_marginTop="10dp"
                android:text="@string/amount"
                android:textSize="18sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/amount_text"
                style="@style/card_text"
                android:layout_alignTop="@+id/amount_label"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/amount_label" />
        <TextView
                android:id="@+id/temperature_label"
                style="@style/card_text"
                android:layout_below="@+id/amount_label"
                android:layout_marginTop="10dp"
                android:text="@string/temperature"
                android:textSize="18sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/temperature_text"
                style="@style/card_text"
                android:layout_alignTop="@+id/temperature_label"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/temperature_label" />

        <Button
                android:id="@+id/edit_room_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/temperature_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/edit" />

        <Button
                android:id="@+id/delete_room_btn"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_room_btn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="false"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="3dp"
                android:backgroundTint="@color/green"
                android:text="@string/delete" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>